<resources>
    <string name="app_name">DPFoodApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_would_you_like_to_eat">What would you like to eat</string>
    <string name="home">Home</string>
    <string name="over_popular_items">over popular items</string>
    <string name="category">Category:</string>
    <string name="location">Location:</string>
    <string name="instruction">_Instruction</string>
    <string name="food_category">Food category</string>
    <string name="search_here">Search here..</string>
    <string name="favorite">Favorite</string>
    <string name="food_description_list">Food Description List</string>
    <string name="history">History</string>
</resources>