<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="vertical">
            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:indeterminate="true"
                android:maxHeight="20dip"
                android:minHeight="0dip"
                android:visibility="gone"
                app:indicatorColor="@color/red"
                app:layout_constraintBottom_toBottomOf="@+id/doyoulike"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:trackThickness="2dp" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_190sdp"
                    app:cardCornerRadius="@dimen/_13sdp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/loading_meals"
                    app:layout_constraintStart_toStartOf="@+id/loading_meals"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/mealImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/loading_gif"
                        android:transitionName="image_big"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/loading_meals"
                        app:layout_constraintStart_toStartOf="@+id/loading_meals"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.cardview.widget.CardView>
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/loading_meals"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_190sdp"
                    app:lottie_rawRes="@raw/loading"
                    android:visibility="visible"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="230dp"
                    android:layout_marginEnd="25dp"
                    android:clickable="true"
                    android:foregroundGravity="center"
                    android:paddingTop="@dimen/_22sdp"
                    android:paddingRight="44dp"
                    android:src="@drawable/ic_favaurite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/whitesmoke" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_33sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/categoryName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/category"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/ic_baseline_category_24"
                    android:layout_marginLeft="@dimen/_33sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="center"
                    android:drawablePadding="@dimen/_12sdp"
                    android:maxWidth="@dimen/_150sdp" />
                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/_83sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:drawablePadding="@dimen/_12sdp"
                    android:maxWidth="@dimen/_150sdp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction"
                android:textColorLink="@color/black"
                android:fontFamily="@font/myfont"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawablePadding="@dimen/_12sdp"
                android:maxWidth="@dimen/_150sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/myfont"
                android:textSize="16sp"
                android:layout_margin="@dimen/_30sdp"
                android:lineSpacingExtra="@dimen/_10sdp"
                android:textColor="@color/black"
                android:id="@+id/description"/>

            <ImageView
                android:id="@+id/youtube"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_40sdp"
                android:src="@drawable/youtube"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>